# VEN

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build-mac.sh  build.bat  build.sh  code_refactor_optimization.md  config.yaml  install.ps1  install.sh  uninstall.ps1  uninstall.sh
config/: config.default.yaml  config.yaml
docs/: Dolby Vision CRF Requirements.md  Dolby Vision Implementation Plan.md  Dolby Vision Preservation.md  HDR modular redesign.md  av1_ffmpeg_guide.md  modular_av1_development_plan.md
src/: content_manager.rs  dolby_vision_integration_test.rs  lib.rs  main.rs  metadata_workflow.rs
src/analysis/: complexity.rs  content.rs  crop.rs  dolby_vision.rs  mod.rs  video.rs  web_search.rs
src/cli/: args.rs  commands.rs  mod.rs  simple_args.rs
src/color/: mod.rs  spaces.rs  transfers.rs
src/config/: loader.rs  mod.rs  preview_profiles.rs  profiles.rs  stream_profiles.rs  types.rs
src/dolby_vision/: mod.rs  rpu.rs  tools.rs
src/encoding/: filters.rs  mod.rs  modes.rs  options.rs
src/hardware/: cuda.rs  mod.rs
src/hdr/: detection.rs  encoding.rs  metadata.rs  mod.rs  types.rs
src/hdr/formats/: hdr10.rs  hdr10_plus.rs  hlg.rs  mod.rs
src/hdr10plus/: manager.rs  metadata.rs  mod.rs  tools.rs
src/mkvmerge/: mod.rs  tool.rs
src/preview/: mod.rs
src/processing/: mod.rs
src/progress/: mod.rs  tracker.rs
src/stream/: mod.rs  preservation.rs
src/utils/: error.rs  ffmpeg.rs  filesystem.rs  logging.rs  mod.rs  progress.rs  tool_runner.rs
src/utils/logging/: helpers.rs  mod.rs  text_utils.rs
src/utils/logging/file_logger/: analysis.rs  crop.rs  encoding.rs  mod.rs
(+4 files in other folders)
