[package]
name = "ffmpeg_autoencoder"
version = "3.2.0"
edition = "2021"
authors = ["moonwhaler"]
description = "Modern Rust-based FFmpeg video encoding automation with intelligent content analysis"
readme = "README.md"
license = "MIT"
repository = "https://github.com/example/ffmpeg_autoencoder_rust"

[[bin]]
name = "ffmpeg-encoder"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }

# Async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"


# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "chrono"] }
chrono = "0.4"

# File system and path utilities
walkdir = "2.4"
uuid = { version = "1.6", features = ["v4"] }

# Progress bars and terminal UI
indicatif = { version = "0.17", features = ["tokio"] }
console = "0.15"
crossterm = "0.27"

# Regular expressions and string processing
regex = "1.10"
once_cell = "1.19"


# Process management
tokio-process = "0.2"

# Numeric computations
num-traits = "0.2"

# Configuration and environment
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
